Fix alignment of download button
fixes #4

--- a/assets/css/_header.styl
+++ b/assets/css/_header.styl
@@ -15,6 +15,8 @@
     font-family: $font-family-primary-bold
     margin-right: 7px
 
+.cta
+  margin-top: 117px
 .social-icons
   li
     float: left
